spade-tests/src/snapshots/spade_tests__typeinference__assertions_require_bools.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: int<32>) -> bool {
    assert x;
    true
}

error: Expected type bool, got int<32>
  ┌─ testinput:2:12
  │
1 │ fn test(x: int<32>) -> bool {
  │            ------- Type int<32> inferred here
2 │     assert x;
  │     -------^
  │     │      │
  │     │      Expected bool
  │     Type bool inferred here
  │
  = note: Expected: bool
               Got: int<32>


